syntax = "proto3";

option go_package="irc_server/src/object";

message Message {
    Command command = 2;
    User user =3;
    HostAddress hostAddress = 4;
}


message Response {
    string status = 1;
    string msg = 2;
}


enum Command {
    Unkwn = 0;
    Ping = 1;
    Pong = 2;
    Reg = 3;
    Log = 4;
    PrivMsg = 5;
    GrpMsg = 6;
}

message User {
    string username = 1;
    string password = 2;
}

message HostAddress {
    string hostIp = 1;
    string hostPort = 2; 
}

